--- a/plugin.xml
+++ b/plugin.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest">
-            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <provider
